# claude_code_workshop

./: .flake8  .mcp.json  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
app/: customization_config.py  main.py  mock_data.py  models.py
app/api/: routes.py
cc-workshop-1/: 01_context_window.md  02_getting_started.md  03_slash_commands.md  04_skills.md  05_subagents.md  06_mcp_playwright.md  07_hooks.md  08_marketplace.md  README.md
scripts/: README.md  format.sh  lint.sh  quality.sh  test.sh
static/: manifest.json
static/css/: customization.css  styles.css
static/js/: app.js  cart.js  customization-builder.js  customization-data.js  dark-mode.js  service-worker.js  wishlist.js
templates/: index.html  wishlist.html
tests/: README.md  test_api.py  test_customization_api.py  test_customization_ui.py  test_models.py  test_wishlist.py  test_wishlist_frontend.html
workshop/: 01_getting_started.md  02_claude_memory.md  02_slash_commands.md  03_skills.md  03_slash_commands.md  04_skills.md  04_subagents.md  05_mcp_playwright.md  05_subagents.md  06_advanced_workflows.md  README.md
workshop/examples/agents/: code-reviewer.md  doc-generator.md  test-generator.md
workshop/examples/commands/: debug.md  e2e-test.md  quality-check.md  review.md  test.md
workshop/examples/skills/: api-designer.md  code-reviewer.md
workshop/examples/skills/api-designer/: SKILL.md
workshop/examples/skills/code-reviewer/: SKILL.md
